[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Cliente.gd" type="Script" id=1]
[ext_resource path="res://cenas/Cenario.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Servidor.gd" type="Script" id=3]
[ext_resource path="res://scripts/Inicializar.gd" type="Script" id=4]
[ext_resource path="res://cenas/interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/interface_servidor.tscn" type="PackedScene" id=6]

[node name="Jogo" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 177.122, 19.473 ],
"_edit_vertical_guides_": [ 1040.71, 561.027, 20.2714 ]
}

[node name="Cliente_1" type="Node2D" parent="."]
position = Vector2( 20, 350 )
scale = Vector2( 3, 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Interface" parent="Cliente_1" instance=ExtResource( 5 )]
margin_left = 35.0
margin_top = -64.0001
margin_right = 35.0
margin_bottom = -64.0001
rect_scale = Vector2( 0.5, 0.5 )

[node name="Cenario" parent="Cliente_1" instance=ExtResource( 2 )]

[node name="Servidor" type="Node2D" parent="."]
position = Vector2( 560, 350 )
scale = Vector2( 3, 3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Interface_servidor" parent="Servidor" instance=ExtResource( 6 )]
margin_left = 35.0
margin_top = -64.0
margin_right = 35.0
margin_bottom = -64.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Cenario" parent="Servidor" instance=ExtResource( 2 )]

[node name="Cliente_2" type="Node2D" parent="."]
position = Vector2( 1100, 350 )
scale = Vector2( 3, 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Interface" parent="Cliente_2" instance=ExtResource( 5 )]
margin_left = 38.3333
margin_top = -64.0001
margin_right = 38.3333
margin_bottom = -64.0001
rect_scale = Vector2( 0.5, 0.5 )

[node name="Cenario" parent="Cliente_2" instance=ExtResource( 2 )]

[node name="Tela_cheia" type="Button" parent="."]
margin_left = 21.0
margin_top = 21.0
margin_right = 148.0
margin_bottom = 63.0
rect_scale = Vector2( 1.3, 1.3 )
text = "Tela cheia"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Tela_cheia" to="." method="_tela_cheia"]
